After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723326 - spice-connection: Fix auto-clipboard property enum
spice-connection: Fix auto-clipboard property enum
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-30 22:31 UTC by Cole Robinson
Modified: 2014-02-04 08:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
spice-connection: Fix auto-clipboard property enum (1.13 KB, patch)
2014-01-30 22:31 UTC, Cole Robinson
committed Details | Review

Description Cole Robinson 2014-01-30 22:31:47 UTC
Honestly not sure what effect this has, just found through code inspection.
Comment 1 Cole Robinson 2014-01-30 22:31:48 UTC
Created attachment 267678 [details] [review]
spice-connection: Fix auto-clipboard property enum
Comment 2 David King 2014-02-04 08:57:04 UTC
Comment on attachment 267678 [details] [review]
spice-connection: Fix auto-clipboard property enum

Thanks for the patch, I pushed it to master as aa2a2165151926aac5b37830f2a790f6be4f48e5.