Fix Spice plugin auto-clipboard property enum

https://bugzilla.gnome.org/show_bug.cgi?id=723326